--- a/emap-model/pom.xml
+++ b/emap-model/pom.xml
@@ -12,6 +12,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.pepper</groupId>
+			<artifactId>console-model</artifactId>
+			<version>${console.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<scope>provided</scope>
