--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -22,11 +22,11 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 
-console-init-data=false
-
 environment=pro
 
 enabled.kaptcha=true
+
+enabled.globalTransaction=false
 
 #==================================nacos==============================================
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
