--- a/emap-rest/pom.xml
+++ b/emap-rest/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -9,7 +10,7 @@
 	<artifactId>emap-rest</artifactId>
 	<version>${project.parent.version}</version>
 	<packaging>jar</packaging>
-	
+
 
 	<dependencies>
 		<dependency>
@@ -17,12 +18,12 @@
 			<artifactId>emap-service</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.pepper</groupId>
 			<artifactId>console-service</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.pepper</groupId>
 			<artifactId>discreteness-configuration</artifactId>
@@ -34,6 +35,10 @@
 		<dependency>
 			<groupId>com.pepper</groupId>
 			<artifactId>discreteness-authentication</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.pepper</groupId>
+			<artifactId>discreteness-file-service</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
