--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -28,6 +28,9 @@ enabled.kaptcha=true
 
 enabled.globalTransaction=false
 
+file.local.storage.path=/file/storage
+file.storage.type=local_storage
+
 #==================================nacos==============================================
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
 #management.endpoints.web.exposure.include=*
