--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -33,7 +34,7 @@
 				<artifactId>pepper-core</artifactId>
 				<version>${pepper.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>com.pepper</groupId>
 				<artifactId>console-service</artifactId>
@@ -49,6 +50,18 @@
 			<dependency>
 				<groupId>com.pepper</groupId>
 				<artifactId>discreteness-file-business</artifactId>
+				<version>${pepper.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.pepper</groupId>
+				<artifactId>discreteness-file-service</artifactId>
+				<version>${pepper.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.pepper</groupId>
+				<artifactId>discreteness-file-rest</artifactId>
 				<version>${pepper.version}</version>
 			</dependency>
 
