--- a/emap-rest/pom.xml
+++ b/emap-rest/pom.xml
@@ -82,6 +82,13 @@
 		    <artifactId>spring-data-commons</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>cn.jpush.api</groupId>
+		    <artifactId>jpush-client</artifactId>
+		    <version>3.3.10</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
