--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -28,6 +28,8 @@ enabled.kaptcha=true
 
 enabled.globalTransaction=false
 
+warningLevel=2
+
 file.local.storage.path=/file/storage
 file.storage.type=local_storage
 
