--- a/emap-run/pom.xml
+++ b/emap-run/pom.xml
@@ -17,11 +17,11 @@
 			<artifactId>emap-business</artifactId>
 			<version>${project.parent.version}</version>
 		</dependency>
-		<!-- <dependency>
+		<dependency>
 			<groupId>com.pepper</groupId>
 			<artifactId>emap-web</artifactId>
 			<version>${project.parent.version}</version>
-		</dependency> -->
+		</dependency>
 		<dependency>
 			<groupId>com.pepper</groupId>
 			<artifactId>emap-rest</artifactId>
