--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -31,7 +31,7 @@ enabled.globalTransaction=false
 warningLevel=4
 
 file.local.storage.path=/file/storage
-file.storage.type=local_storage
+file.storage.type=localStorage
 
 #==================================nacos==============================================
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
