--- a/emap-rest/pom.xml
+++ b/emap-rest/pom.xml
@@ -83,7 +83,10 @@
 		    <scope>provided</scope>
 		</dependency>
 		
-		
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
