--- a/emap-business/pom.xml
+++ b/emap-business/pom.xml
@@ -16,6 +16,12 @@
 			<version>${project.parent.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.pepper</groupId>
+			<artifactId>console-model</artifactId>
+			<version>${console.version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<exclusions>
