--- a/emap-run/src/main/resources/zh-tw.properties
+++ b/emap-run/src/main/resources/zh-tw.properties
@@ -63,7 +63,7 @@
 1100009=\u6570\u636e\u9519\u8bef\uff01\u7b2c{1}\u884c\uff0cnodeType\u6570\u636e\u9519\u8bef
 1100010=\u6570\u636e\u9519\u8bef\uff01\u7b2c{1}\u884c\uff0c{2}\u5df2\u5b58\u5728
 1100011=\u6570\u636e\u9519\u8bef\uff01\u7b2c{1}\u884c\uff0c{2}\u5df2\u5b58\u5728
-1100012=sourceType\u4e3a\u7a7a\uff0c\u4e0d\u80fd\u8fdb\u884c\u6b21\u64cd\u4f5c
+1100012=sourceType\u4e3a\u7a7a\uff0c\u4e0d\u80fd\u8fdb\u884c\u6b64\u6b21\u64cd\u4f5c
 1200001=\u6570\u636e\u9519\u8bef\uff01\uff08\u975estaff\u7ed3\u6784\u6570\u636e\uff09
 1200002=\u6570\u636e\u9519\u8bef\uff01\u7b2c{1}\u884c\uff0c{2}\u5df2\u5b58\u5728
 1200003=\u6570\u636e\u9519\u8bef\uff01\u7b2c{1}\u884c\uff0csite\u6570\u636e\u9519\u8bef(\u6ca1\u6709/\u627e\u5230\u591a\u4e2asite)
