--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -18,7 +18,8 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/console?serverTimezone=GMT%2b8
 spring.datasource.username=root
 #spring.datasource.password=qcloud3399366
 #spring.datasource.password=A#I%3rAeH;he
-spring.datasource.password=root
+#spring.datasource.password=root
+pring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 
