--- a/emap-run/pom.xml
+++ b/emap-run/pom.xml
@@ -82,12 +82,8 @@
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 		
-		<dependency>
-		    <groupId>net.sf.jasperreports</groupId>
-		    <artifactId>jasperreports</artifactId>
-		    <version>6.9.0</version>
-		</dependency>
-		<dependency>
+		
+		<!-- <dependency>
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports-fonts</artifactId>
 		    <version>6.9.0</version>
@@ -121,8 +117,8 @@
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports-custom-visualization</artifactId>
 		    <version>6.9.0</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 		    <groupId>com.itextpdf</groupId>
 		    <artifactId>itextpdf</artifactId>
 		    <version>5.5.13.1</version>
@@ -138,10 +134,15 @@
 		    <version>5.2.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itext-asiancmaps</artifactId>
+		    <version>5.1.1</version>
+		</dependency> -->
+		<!-- <dependency>
 		    <groupId>org.codehaus.groovy</groupId>
 		    <artifactId>groovy-all</artifactId>
 		    <version>2.4.17</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
