--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -3,7 +3,7 @@ server.port=8081
 spring.redis.host=127.0.0.1
 #spring.redis.host=192.168.1.104
 spring.redis.port=6379
-
+spring.main.allow-bean-definition-overriding=true
 dubbo.enabled=true
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
