--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -33,8 +33,10 @@ warningLevel=4
 
 openDoorUrl=http://127.0.0.1:8080/openDoor.asp
 
-file.local.storage.path=/file/storage
+file.local.storage.path=E:/file/storage
 file.storage.type=localStorage
+
+scheduler.enabled=false
 
 #==================================nacos==============================================
 #spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
