--- a/emap-run/pom.xml
+++ b/emap-run/pom.xml
@@ -73,6 +73,11 @@
 			</dependency> -->
 
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-jasper</artifactId>
 			<scope>provided</scope>
@@ -112,6 +117,7 @@
 		    <artifactId>groovy-all</artifactId>
 		    <version>2.4.17</version>
 		</dependency> -->
+
 	</dependencies>
 
 	<build>
@@ -120,6 +126,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 		</plugins>
 		<!-- <resources>
