--- a/emap-business/pom.xml
+++ b/emap-business/pom.xml
@@ -84,6 +84,11 @@
 		    <artifactId>jpush-client</artifactId>
 		    <version>3.3.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>9.1.1.jre8-preview</version>
+		</dependency>
 	</dependencies>
 
 </project>
