--- a/emap-model/pom.xml
+++ b/emap-model/pom.xml
@@ -37,5 +37,9 @@
 			<artifactId>jackson-databind</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 </project>
