--- a/emap-rest/pom.xml
+++ b/emap-rest/pom.xml
@@ -18,7 +18,11 @@
             <artifactId>emap-service</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.58.Final</version>
+        </dependency>
         <dependency>
             <groupId>com.pepper</groupId>
             <artifactId>console-service</artifactId>
