--- a/emap-run/src/main/resources/emap-run.properties
+++ b/emap-run/src/main/resources/emap-run.properties
@@ -14,7 +14,7 @@ dubbo.metadata-report.address=zookeeper://127.0.0.1:2181
 zookeeper.address=127.0.0.1:2181
 #zookeeper.address=192.168.1.104:2181
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/console?serverTimezone=GMT%2b8&useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/isms?serverTimezone=GMT%2b8&useSSL=false&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
